[package]
name = "relay-st-jude"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Fetching the data
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indoc = "1"

# Error handling and logging
color-eyre = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"
